name:                md2html
version:             0.1.0.0
synopsis:            A Markdown-To-HTML-Compiler
description:         A Markdown-To-HTML-Compiler
homepage:            http://ob.cs.hm.edu/lectures/compiler
-- license:             
license-file:        LICENSE
author:              ...
maintainer:          ...
-- copyright:           
category:            Other
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable md2html
  hs-source-dirs:      src
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
  -- hs-source-dirs:      
  default-language:    Haskell2010

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src tests
  main-is:           TestSuite.hs
  Build-depends:     base >= 4.7 && < 4.8,
                     QuickCheck >= 2,
                     HUnit,
                     test-framework,
                     test-framework-quickcheck2,
                     test-framework-hunit
  default-language:  Haskell2010
  ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind
