name:                md2html
version:             0.1.0.0
synopsis:            A Markdown-to-HTML-Compiler
description:         see README.md
homepage:            http://ob.cs.hm.edu/lectures/compiler.html
license:             BSD3
license-file:        LICENSE
author:              Oliver Braun
maintainer:          ob@cs.hm.edu
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable md2html
  hs-source-dirs:    app
  main-is:           Main.hs
  build-depends:     base
                   , optparse-applicative
                   , md2html
  default-language:  Haskell2010

library
  hs-source-dirs:    src
  exposed-modules:   CodeGen
                   , IR
                   , Parser
                   , Scanner
                   -- , Types
  build-depends:     base
                   , containers
  default-language:  Haskell2010

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  other-modules:     CodeGenSpec
                   , ParserSpec
                   , ScannerSpec
  Build-depends:     base
                   , hspec
                   , md2html
  default-language:  Haskell2010
  ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind
